--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 				<version>3.0.0</version>
 				<configuration>
 					<suiteXmlFiles>
-						<suiteXmlFile>testng.xml</suiteXmlFile>
+						<suiteXmlFile>TestScripttestng.xml</suiteXmlFile>
 					</suiteXmlFiles>
 				</configuration>
 			</plugin>
